generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model User {
  id            String    @id @default(cuid())
  email         String    @unique
  password      String
  name          String
  role          String    @default("reseller") // admin, reseller
  phone         String?
  status        String    @default("active") // active, suspended, banned
  walletBalance Float     @default(0)
  resellerId    String?   // admin or reseller this user is assigned to
  reseller      User?     @relation("ResellerAssignment", fields: [resellerId], references: [id])
  clients       User[]    @relation("ResellerAssignment")
  createdAt     DateTime  @default(now())
  updatedAt     DateTime  @updatedAt
  orders        Order[]
  transactions  Transaction[]
  logs          Log[]

  @@index([email])
  @@index([role])
}

model ServiceCategory {
  id        String    @id @default(cuid())
  name      String    @unique
  createdAt DateTime  @default(now())
  updatedAt DateTime  @updatedAt
  services  Service[]
}

model Service {
  id             String              @id @default(cuid())
  name           String
  description    String?
  type           String              @default("unlock") // unlock, flash, repair, imei (kept for backward compat)
  cost           Float               @default(0)
  sellingPrice   Float               @default(0)
  processingTime String?
  status         String              @default("active") // active, inactive
  clientVisible  Boolean             @default(true)
  categoryId     String?
  category       ServiceCategory?    @relation(fields: [categoryId], references: [id])
  supplierId     String?
  supplier       Supplier?           @relation(fields: [supplierId], references: [id])
  orders         Order[]
  customFields   ServiceCustomField[]
  createdAt      DateTime            @default(now())
  updatedAt      DateTime            @updatedAt

  @@index([supplierId, status])
}

model ServiceCustomField {
  id              String   @id @default(cuid())
  serviceId       String
  service         Service  @relation(fields: [serviceId], references: [id], onDelete: Cascade)
  fieldType       String   // text, textarea, number, select, multiselect, checkbox, file, image, imei_single, imei_multi, serial_single, serial_multi
  label           String
  placeholder     String?
  options         String?  // JSON array for select/multiselect: ["Option 1","Option 2"]
  required        Boolean  @default(false)
  visibleToClient Boolean  @default(true)
  order           Int      @default(0)
  customValues    OrderCustomFieldValue[]
  createdAt       DateTime @default(now())
  updatedAt       DateTime @updatedAt
}

model Supplier {
  id          String    @id @default(cuid())
  name        String
  email       String?
  phone       String?
  website     String?
  type        String    // api, manual, reseller
  status      String    @default("active") // active, inactive
  successRate Float     @default(100)
  totalOrders Int       @default(0)
  priority    Int       @default(1) // 1=highest
  apiKey      String?
  config      String?   // JSON config for supplier
  services    Service[]
  orders      Order[]
  createdAt   DateTime  @default(now())
  updatedAt   DateTime  @updatedAt
}

model Order {
  id            String                 @id @default(cuid())
  orderNumber   String                 @unique
  userId        String
  serviceId     String
  supplierId    String?
  imei          String?
  deviceInfo    String?
  status        String                 @default("pending") // pending, processing, completed, failed, cancelled
  priority      String                 @default("normal")  // low, normal, high, urgent
  assignedTo    String?                // admin user ID this order is assigned to
  cost          Float
  sellingPrice  Float
  profit        Float                  @default(0)
  notes         String?                // client-visible notes
  internalNotes String?                // admin-only internal notes
  result        String?                // JSON result from supplier
  completedAt   DateTime?
  user          User                   @relation(fields: [userId], references: [id])
  service       Service                @relation(fields: [serviceId], references: [id])
  supplier      Supplier?              @relation(fields: [supplierId], references: [id])
  transactions  Transaction[]
  customValues  OrderCustomFieldValue[]
  orderNotes    OrderNote[]
  createdAt     DateTime               @default(now())
  updatedAt     DateTime               @updatedAt

  @@index([userId, status, createdAt])
  @@index([status])
  @@index([assignedTo])
  @@index([priority])
}

model OrderNote {
  id        String   @id @default(cuid())
  orderId   String
  order     Order    @relation(fields: [orderId], references: [id], onDelete: Cascade)
  authorId  String
  authorName String
  content   String
  visible   Boolean  @default(true) // true = client can see, false = internal only
  createdAt DateTime @default(now())

  @@index([orderId])
  @@index([authorId])
}

model OrderCustomFieldValue {
  id             String            @id @default(cuid())
  orderId        String
  order          Order             @relation(fields: [orderId], references: [id], onDelete: Cascade)
  customFieldId  String
  customField    ServiceCustomField @relation(fields: [customFieldId], references: [id])
  value          String            // text value, or JSON for multi-select/files
  createdAt      DateTime          @default(now())
}

model Transaction {
  id            String   @id @default(cuid())
  userId        String
  orderId       String?
  type          String   // deposit, withdraw, transfer, order_payment, order_refund
  amount        Float
  balanceAfter  Float
  description   String?
  status        String   @default("completed") // pending, completed, failed
  reference     String?  // external reference
  user          User     @relation(fields: [userId], references: [id])
  order         Order?   @relation(fields: [orderId], references: [id])
  createdAt     DateTime @default(now())

  @@index([userId, type, createdAt])
}

model Log {
  id        String   @id @default(cuid())
  level     String   // info, warn, error, debug
  message   String
  source    String?  // e.g., "auth", "order", "system"
  details   String?  // JSON stringified extra data
  userId    String?
  user      User?    @relation(fields: [userId], references: [id])
  ip        String?
  userAgent String?
  createdAt DateTime @default(now())

  @@index([level, createdAt])
  @@index([source])
}

model AuditLog {
  id          String   @id @default(cuid())
  userId      String?
  userEmail   String?
  action      String   // e.g., "user.create", "order.update", "login.success"
  entityType  String   // e.g., "user", "order", "service"
  entityId    String?
  description String?  // human-readable description
  module      String?  // e.g., "auth", "users", "services", "orders", "wallet", "security"
  oldValues   String?  // JSON stringified
  newValues   String?  // JSON stringified
  ip          String?
  userAgent   String?
  createdAt   DateTime @default(now())

  @@index([userId])
  @@index([entityType, entityId])
  @@index([action])
  @@index([module])
  @@index([createdAt])
}

model Notification {
  id        String   @id @default(cuid())
  userId    String
  title     String
  message   String
  type      String   @default("info") // info, success, warning, error
  read      Boolean  @default(false)
  link      String?  // optional link to navigate to
  createdAt DateTime @default(now())

  @@index([userId, read])
  @@index([createdAt])
}

model ApiKey {
  id            String    @id @default(cuid())
  name          String
  keyHash       String    @unique // SHA-256 hash of the API key
  keyPrefix     String    // first 8 chars for display (e.g., "sbdu_****")
  userId        String    // owner (admin or client)
  status        String    @default("active") // active, revoked, disabled
  permissions   String    @default("read")   // read, write, admin
  requestLimit  Int       @default(100)     // requests per minute
  totalRequests Int       @default(0)       // total requests made
  lastUsedAt    DateTime?
  expiresAt     DateTime?
  createdAt     DateTime  @default(now())
  updatedAt     DateTime  @updatedAt

  @@index([keyHash])
  @@index([userId])
}
